<resources>
    <string name="app_name">ClientsManager</string>
    <string name="ttlReg">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="logIn">log in</string>
    <string name="clientsListTtl">Your Clients</string>
    <string name="newClient">Add a New Client</string>
    <string name="newName">First Name</string>
    <string name="mobileHint">Mobile Number</string>
    <string name="fullHint">Full Name</string>
    <string name="emailHint">Email address</string>
    <string name="newEventTtl">Event Title</string>
    <string name="newClientSave">save</string>
    <string name="clientName">Client\'s Name</string>
    <string name="nameHint">Full Name</string>
    <string name="events">events</string>
    <string name="regTtl">Registration</string>
    <string name="newEventDescNotes">Description and notes</string>
    <string name="cancel">Cancel</string>
    <string name="eventsCount">Events: </string>
    <string name="eventTtl">event title</string>
    <string name="eventTimeAndDate"><![CDATA[Date]]></string>
    <string name="notes">Notes</string>
    <string name="clientMobile">Mobile Number</string>
    <string name="ClientEmail">Email Address</string>
    <string name="clientEvents">Events</string>
    <string name="listOfClients">My Clients List</string>
    <string name="appTtl">Clients Manager</string>
    <string name="clientSavedMsg">The client was added</string>
    <string name="cancelAdd">Cancel</string>
    <string name="serial">#</string>
    <string name="dbConnErr">Error - database connection failure</string>
    <string name="registerBtn">register</string>
    <string name="cancelAddNew">Cancel</string>
    <string name="title_activity_specific_client">SpecificClient</string>
    <string name="menuViewClient">View client</string>
    <string name="menuDeleteClient">Delete client</string>
    <string name="saveEvent">Save</string>
    <string name="saveDate">Set Date</string>
    <string name="newEventCancel">Cancel</string>
    <string name="newEventSave">Save</string>
    <string name="date">event\'s date</string>
    <string name="menuDeleteEvent">Delete Event</string>
    <string name="menuViewEvent">View Event</string>
    <string name="eventSavedMsg">The event was saved</string>
    <string name="SaveNew">save</string>
    <string name="CancelNew">cancel</string>
    <string name="menuEditEvent">Edit Event</string>
    <string name="EditEvent">Edit</string>
    <string name="exitEventDetails">Exit</string>
    <string name="eventEdited">The changes were saved</string>
    <string name="loading">Loading</string>
</resources>
