<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_margin="@dimen/ttlMargin"
        android:id="@+id/addANewClientTtlId"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newClient"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/newFullName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/fullHint"
        android:inputType="textPersonName"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/newMobileId"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/mobileHint"
        android:inputType="textPersonName"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/newEmailId"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/saveNewClientId"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/alertBtnMargin"
            android:layout_weight="1"
            android:text="@string/SaveNew"/>
        <Button
            android:id="@+id/cancelNewClientId"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/alertBtnMargin"
            android:layout_weight="1"
            android:text="@string/CancelNew"/>
    </LinearLayout>
</LinearLayout>