<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/eventsFragId"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/clientFragNameId"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/ttlMargin"
        android:layout_height="wrap_content"
        android:text="@string/clientName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/btnMargin"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/clientMobileId"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clientMobile"
            android:textAlignment="center"
            android:textSize="15sp" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/clientEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClientEmail"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/clientEvents"-->
        <!--android:layout_margin="@dimen/btnMargin"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="24sp" />-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/eventListId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/eventsFabId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fabMargin"
        android:scaleType="center"
        app:fabSize="normal"
        android:src="@drawable/fab_icon"
        app:backgroundTint="@android:color/darker_gray"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_anchor="@id/eventListId"
        app:layout_anchorGravity="bottom|right" />
</android.support.design.widget.CoordinatorLayout>